# sneakarena

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pre-commit-config.yaml  project_snapshot.txt  pyproject.toml  ruff.toml  snapshot.sh
config/: model_endpoint_map.json  models.json
docs/: USER_MANUAL.md
lmarena_bridge/: logging_config.py  main.py  settings.py
lmarena_bridge/api/: routes_chat.py  routes_internal.py  routes_models.py
lmarena_bridge/services/: file_bed_client.py  openai_adapter.py  stream_parser.py  websocket_hub.py
lmarena_bridge/utils/: jsonc.py
lmarena_bridge_gui/: gtk_app.py
lmarena_bridge_gui/ui/: chat_playground.py  config_editor.py  endpoint_mapper.py  log_viewer.py  main_window.py  model_manager.py  setup_wizard.py  widgets.py
lmarena_bridge_gui/utils/: http_client.py  notifications.py
packaging/systemd/: lmarena-bridge.service
public/userscripts/: LMArenaApiBridge.user.js
tests/: test_settings.py  test_stream_parser.py
